# cognitum-consultants

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
.plans/: README.md  implementation-plan.md  implementation-prompts.md  implementation-sequence.md  research.md
.plans/adr/: ADR-001-record-architecture-decisions.md  ADR-002-primary-language-rust-secondary-typescript.md  ADR-003-rust-web-framework-axum.md  ADR-004-cargo-workspace-repo-layout.md  ADR-005-frontend-stack-vite-tailwind-react.md  ADR-006-bff-frontend-interop-served-api-spa.md  ADR-007-nexus-integration-pattern.md  ADR-008-authentication-session-strategy.md  ADR-009-authorization-permission-aware-presentation.md  ADR-010-persistence-strategy-own-aggregates.md  ADR-011-event-notification-delivery-sse.md  ADR-012-observability-strategy.md  ADR-013-testing-strategy.md  ADR-014-deployment-runtime-topology.md  ADR-015-frontend-server-state-data-fetching.md  ADR-016-resilience-partial-failure-nexus-aggregation.md  ADR-017-design-system-packaging-strategy.md  ADR-018-nexus-event-delivery-push-reaction.md  ADR-019-dashboard-capability-family-matching.md  ADR-020-sales-pipeline-and-expanded-modules.md
.plans/ddd/: anti-corruption-layers.md  consultant-experience-context.md  domain-events.md  domain-map.md
.sqlx/: query-23ae005a5d777afe3e9e7cf10e85c5f0946c729a77e2d604420f1f904b12002d.json  query-2a4299b0ed3913a8e5af2ff12a40e61bc34910b8969dba5dcaa57286f74a0e77.json  query-2d875dce75c55aa4b3b327bba3711aec7de297b220e5d331214bd535ea26941b.json  query-3ff633d7010999724ee6c5e15957526a301a2cb473e207f197173a4343664ff4.json  query-4a2aaa8a005c40ebcfadd7c58131f970ae7041ee2fafe337f9d67c0d527c6bc7.json  query-5472bc39f49befd5188849269cf041ca24a5cc4e55ae6fdbc9df85f185e64b24.json  query-58e5891983a8c93fbde7579f2a1d1996b4d1facfbc09e5d7276e7af6cf6a6abc.json  query-5a51c2182d353ee6b91094286634ccedb0b37b80eac36ecaa368070c6e16f9de.json  query-68696d115dd524d2711bb50fe6ab476871b275b73a89102104953b164835865a.json  query-77f9e737295bd1b5284b8d7c66399d4e3b91b5e3cd0c725aed865d28b9fc2d53.json  query-83b4ad52f1b482f99d1ba59ce8333cdc1e12d22dbc7c3830b8ccd5ac43f287cd.json  query-8b6de328112b46d326f854e4c25087fec09b07d433064adbfccabae4c7733247.json  query-9155a7eafd08fb801fda57bee2335db84d7e90daffbccb59cd09a37644bb6f1d.json  query-96afc4cc76d020c0ef1b1e099077b5f6448e31d8c2e007a47500d2ffec824444.json  query-98e1276d6fac7e78ba14eb216e14d8fb2a24048e6819b741800ea1cbe6a9cada.json  query-9a15bcdf1302932a84c62dcb238c7441d9dacf52af3abfbe5490ed110788c7a1.json  query-a729dd093320180ceb9c4b9511a30af3eb750c89bea106b0aa35cbd6df394e46.json  query-af9af7156762c6c416fa7701573a508f9abbd3aed0153199fd3db8e990660928.json  query-b44c729aadd60d3446ef2ba5f9ab2f8a5d2e4a1eab5e8e972f6e0d8ce6740367.json  query-b676443ea95512085226ab1733d5e1778c614772775542e811bd11e76c233a01.json  query-ba5c6eb072c3334e754d8155940cbd52a7339e4798aab103a52c3ab231c7fcc0.json  query-c820f4d3ef15d114c8f7d524bdabe132b292a2dbf58b6233e09ea918e3f6615f.json  query-c86ed0770f2778d3012e2e1be7f0afaa65f70c9c113d1d93ea6b0d4746e775cf.json  query-db4f77402820a855af6d0d2d6316574e64942cd3ede0a35918c14c2a0b069db8.json  query-e427e9642e60c993971c8b5af4674552d55c2a6e8e9c869fe0740c36596cc080.json  query-f7b56c436e3614bc885791e879fd6d2ea765497695fd0c62a1b584a7b88cfd5d.json
crates/auth/: Cargo.toml
crates/auth/src/: dev_stub.rs  firebase.rs  google_identity_token.rs  lib.rs
crates/bff-api/: Cargo.toml
crates/bff-api/src/: action_items.rs  capacity.rs  commit.rs  correlation.rs  customer.rs  dashboard.rs  edu.rs  event_ingestion.rs  event_notify_bridge.rs  execution.rs  health.rs  landscape.rs  legal.rs  main.rs  metrics.rs  notifications.rs  notifications_sse.rs  permissions.rs  products.rs  reactions.rs  sales.rs  session.rs  telemetry.rs  workflow_sessions.rs
crates/bff-core/: Cargo.toml
crates/bff-core/src/: action_queue_entry.rs  consultant_action_item.rs  consultant_preferences.rs  dashboard_configuration.rs  event_ingestion.rs  lib.rs  notification_item.rs  preference_key.rs  prospect.rs  save_outcome.rs  workflow_session.rs
crates/config/: Cargo.toml
crates/nexus-client/: Cargo.toml
crates/nexus-client/src/: armor.rs  capacity.rs  circuit_breaker.rs  commit.rs  customer.rs  edu.rs  execution.rs  landscape.rs  legal.rs  lib.rs  products.rs  reqwest_transport.rs  retry.rs  sales.rs  timeout.rs  transport.rs
crates/nexus-client/tests/: armor_gateway.rs  capability_caller.rs  capacity_gateway.rs  commit_gateway.rs  customer_gateway.rs  edu_gateway.rs  execution_gateway.rs  landscape_gateway.rs  legal_gateway.rs  products_gateway.rs  resilience.rs  sales_gateway.rs  transport_smoke.rs
crates/persistence/: Cargo.toml  README.md
crates/persistence/migrations/: 20260718002751_consultant_preferences.down.sql  20260718002751_consultant_preferences.up.sql  20260718003944_dashboard_configuration.down.sql  20260718003944_dashboard_configuration.up.sql  20260718004942_cross_capability_workflow_sessions.down.sql  20260718004942_cross_capability_workflow_sessions.up.sql  20260718022630_notification_items.down.sql  20260718022630_notification_items.up.sql  20260718022631_action_queue_entries.down.sql  20260718022631_action_queue_entries.up.sql  20260718220000_approved_consultants.down.sql  20260718220000_approved_consultants.up.sql  20260718220001_sessions.up.sql  20260719210000_prospects.down.sql  20260719210000_prospects.up.sql  20260719210500_consultant_action_items.down.sql  20260719210500_consultant_action_items.up.sql  README.md
crates/persistence/src/: action_queue_entry_repository.rs  consultant_action_item_repository.rs  consultant_preferences_repository.rs  dashboard_configuration_repository.rs  event_notify.rs  lib.rs  notification_repository.rs  prospect_repository.rs  workflow_session_repository.rs
docs/: DESIGN_SYSTEM.md  SALES_FLOW_PATTERN.md  ci.md  deployment.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: dev.sh  manage-consultants.sh
(+72 files in other folders)
