[package]
name = "bff-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bff-core = { path = "../bff-core" }
correlation-context = { path = "../correlation-context" }
nexus-client = { path = "../nexus-client" }
# TODO(PROMPT-11/ADR-008): `dev-auth` is enabled directly (not forwarded
# through a `bff-api` feature flag) because no real, Armor-backed
# `SessionProvider` exists yet — `bff-api::AppState` has nothing else to
# construct as its `SessionProvider` today, so a toggle would just fail to
# compile with the feature off. Once U11 lands a real provider, this should
# become conditional (either a `bff-api` feature that picks which provider
# `main.rs` constructs, or a runtime switch on `Config::is_dev()`), and the
# `/api/login/dev` route + `AppState::dev_session_provider` field below
# should be gated the same way.
auth = { path = "../auth", features = ["dev-auth"] }
persistence = { path = "../persistence" }
config = { path = "../config" }
axum.workspace = true
# `permissions::PermissionCache` (PROMPT-15) needs `tokio::sync::RwLock`
# for concurrent per-consultant cache access across request handlers; `time`
# bounds the `GET /readyz` database check with a timeout (`health` module,
# ADR-014); `signal` lets `main` wait on `SIGTERM`/`SIGINT` for graceful
# shutdown (ADR-014, ADR-011's "drain in-flight requests/SSE connections").
tokio = { workspace = true, features = ["sync", "time", "signal"] }
serde_json = "1.0.150"
# Serves the built frontend SPA (`frontend/dist`) as static files at `/`,
# with an `index.html` fallback for client-side routing (ADR-014's
# single-image API+SPA topology; ADR-006). Only mounted when `Config::static_dir`
# is set and exists on disk — see `main.rs`.
tower-http = { version = "0.6", features = ["fs"] }
tracing.workspace = true
uuid.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.33.0"
opentelemetry_sdk = { version = "0.32.1", features = ["trace"] }
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
opentelemetry = "0.32.0"
axum-extra = { version = "0.12.6", features = ["cookie"] }
# `permissions::PermissionCache` TTL math (PROMPT-15) and the
# `_permission-check-example` route's query-param struct need
# `DateTime<Utc>`/`Duration` and `serde::Deserialize` respectively. Version
# matches `nexus-client`'s chrono choice so `PermissionAssertion::expires_at`
# round-trips cleanly across the crate boundary.
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# ADR-013 layer 3 / ADR-010: Postgres-backed integration tests via testcontainers.
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
# `permissions` unit tests (PROMPT-15) implement a mock `ArmorGateway` test
# double, which — like `nexus-client`'s own trait — is `#[async_trait]`.
async-trait = "0.1"
# `dashboard` router-level tests (PROMPT-23) drive the real Axum `Router`
# end-to-end (including the `require_session` 401 gate) via `oneshot`,
# rather than calling handler functions directly.
tower = { version = "0.5", features = ["util"] }
# Same tests run migrations against a real, ephemeral Postgres
# (testcontainers) so `PgDashboardConfigurationRepository` round-trips are
# exercised for real; version/features match `persistence`'s own choice so
# `sqlx::migrate!("../persistence/migrations")` resolves identically.
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate"] }
