[package]
name = "bff-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
nexus-client = { path = "../nexus-client" }
# `ConsultantPreferencesRepository` (PROMPT-20) needs to be object-safe
# (`Arc<dyn ConsultantPreferencesRepository>` in bff-api's Axum state) which
# native async-fn-in-traits does not support; matches auth's SessionProvider
# convention (PROMPT-10).
async-trait = "0.1.89"
thiserror = "2.0.18"
# `PreferenceKey`/`ConsultantPreferences` derive `Serialize`/`Deserialize` so
# `persistence` can round-trip them through the ADR-010 JSONB column without
# bff-core depending on a specific database crate (ADR-004) — note
# persistence depends on bff-core (to implement its repository trait), not
# the other way around, so the earlier stub dependency on `persistence` here
# has been removed to avoid a crate dependency cycle.
serde = { version = "1.0", features = ["derive"] }
# `CrossCapabilityWorkflowSession` (PROMPT-22) needs `session_id: Uuid` and
# `expires_at: DateTime<Utc>` for its TTL invariant. `uuid` is a workspace
# dependency (already pulled in with the `v4` feature by `auth`'s `Session`);
# `chrono`'s version/feature set matches `auth`'s choice (PROMPT-10) so
# timestamps round-trip identically across crates without a `serde` feature
# this crate doesn't need (persistence converts at its own boundary, per
# ADR-004).
uuid = { workspace = true }
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Only used in tests, to prove that an unknown preference key fails to parse
# at the JSON deserialization boundary (not just via Rust's type system).
serde_json = "1.0.150"
