[package]
name = "nexus-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
correlation-context = { path = "../correlation-context" }
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"

[dev-dependencies]
# ADR-013 layer 2: wiremock-backed gateway contract tests against hand-written
# fixtures until real Nexus contracts mature (see ../../.plans/adr/ADR-013-testing-strategy.md).
wiremock = "0.6.5"
tokio = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
opentelemetry_sdk = { version = "0.32.1", features = ["trace"] }
