[package]
name = "persistence"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
# "json" enables sqlx's `Json<T>` wrapper (`consultant_preferences.rs`,
# PROMPT-20), used to round-trip `HashMap<PreferenceKey, String>` through
# the `consultant_preferences.preferences` JSONB column via `query_as!`.
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "uuid", "chrono", "json"] }
# `bff-core` defines the `ConsultantPreferencesRepository` trait and the
# `ConsultantPreferences`/`PreferenceKey` types this crate implements
# storage for (ADR-004: repository traits live in bff-core, persistence
# implements them — not the other way around).
bff-core = { path = "../bff-core" }
async-trait = "0.1.89"
serde_json = "1.0.150"
# `WorkflowSessionRepository::expire_older_than` (PROMPT-22) takes a
# `chrono::DateTime<Utc>` cutoff directly (the trait's signature, defined in
# bff-core) — matches persistence's/auth's chrono choice (0.4.45) so
# timestamps round-trip identically across crates.
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
uuid = { workspace = true }
# `event_notify::PgNotifyPublisher` (PROMPT-32, ADR-014) logs failed
# `pg_notify` calls — best-effort, not propagated as an ingestion error (see
# that module's doc comment) — matching every other gateway/repository
# error-logging convention in this repo.
tracing = { workspace = true }

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
# `event_notify`'s tests (PROMPT-32) bound their `PgListener::recv().await`
# with `tokio::time::timeout` so a broken NOTIFY/LISTEN round-trip fails
# fast instead of hanging forever — needs the `time` feature on top of the
# `rt-multi-thread`/`macros` already used by every other `#[tokio::test]` in
# this crate.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
